# mcp-snoop

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_trace/: __init__.py  tracer.py
tests/: test_tracer.py
