[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-trace"
version = "0.1.0"
description = "Transparent stdio interceptor for MCP JSON-RPC traffic. Like strace, but for MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["mcp", "model-context-protocol", "debugging", "tracing", "stdio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
mcp-trace = "mcp_trace.tracer:main"

[project.urls]
Homepage = "https://github.com/0-co/mcp-trace"
Repository = "https://github.com/0-co/mcp-trace"
Issues = "https://github.com/0-co/mcp-trace/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trace"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]
